--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-# This file is used by pip to install required python packages
-# Usage: pip install -r requirements.txt
-
-# Flask Framework
-Flask==0.12
-
-# Flask Packages
-Flask-Login==0.4.0
-Flask-Migrate==2.0.2
+Flask==0.10.1
+Flask-Bcrypt==0.6.2
+Flask-DebugToolbar==0.9.2
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-Migrate==1.3.0
+Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-Flask-User==0.6.10
-Flask-WTF==0.13.1
-
-# Development tools
-pytest==3.0.5
-pytest-flask==0.10.0
-pytest-cov==2.4.0
-
+Flask-Testing==0.4.2
+Flask-WTF==0.11
+Jinja2==2.7.3
+Mako==1.0.1
+MarkupSafe==0.23
+SQLAlchemy==0.9.9
+WTForms==2.0.2
+Werkzeug==0.10.1
+alembic==0.7.4
+blinker==1.3
+coverage==3.7.1
+itsdangerous==0.24
+python-bcrypt==0.3.1
+watchdog==0.8.3
