--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
+alembic==0.7.4
+Babel==2.3.4
+blinker==1.3
+coverage==3.7.1
 Flask==0.10.1
-Flask-Bcrypt==0.6.2
+Flask-Babel==0.11.1
+Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.9.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.0
-Flask-SQLAlchemy==2.0
+Flask-Principal==0.4.0
 Flask-Script==2.0.5
+Flask-Security==1.7.5
+Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
 Flask-WTF==0.11
+gunicorn==19.4.5
+itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
-SQLAlchemy==0.9.9
-WTForms==2.0.2
-Werkzeug==0.10.1
-alembic==0.7.4
-blinker==1.3
-coverage==3.7.1
-itsdangerous==0.24
+nose==1.3.7
+passlib==1.6.5
+psycopg2==2.6.1
 python-bcrypt==0.3.1
-watchdog==0.8.3
+pytz==2016.7
+SQLAlchemy==0.9.9
+Werkzeug==0.10.1
+WTForms==2.0.2
